apps/gethomepage/ingress-homepage.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gethomepage-ingressroute
  namespace: gethomepage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dashboard.denniscloud.io`)
      kind: Rule
      services:
        - name: homepage
          port: 3000
  tls:
    secretName: gethomepage-certificate-secret
